--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="Ycoin" id="Ycoin">
                     <span class="YcoinGB">
-                        <img src="/imagens/iconyoshi.png">
+                        <img src="./imagens/iconyoshi.png">
                     </span>
                 </div>
             </div>
